# OpenEducationAnalytics

./: .gitignore  404.html  CNAME  Education Analytics Summary.docx  Gemfile  OpenEduAnalyticsImplementationGuide-backup.docx  OpenEduAnalyticsImplementationGuide.docx  README.md  _config.yml  about.md  contact.md  index.html  index.md  jkms  now.md  oea_setup.py  pyproject.toml  readme.md  requirements.txt  set_names.sh  setup.py  setup.sh  setup_base_architecture.sh  setup_test_env.sh  setup_testenv.sh  sitemap.html
.devcontainer/: devcontainer.json
OEA_Portal/: .env
_best_practices_for_contributing/: fifth_item.md  first_item.md  fourth_item.md  second_item.md  seventh_item.md  sixth_item.md  third_item.md
_challenges/: item_1.md  item_2.md  item_3.md  item_4.md
_data/: customer_feedback.yml  navigation.yml  oea_applications.yml  oea_modules.yml  oea_packages.yml  oea_partners.yml  oea_partners_looking_for_help.yml  skills_and_training.yml
_includes/: footer.html  header.html  masthead.html  page__hero.html  social-metatags.html  youtubePlayer.html
_layouts/: default.html  home.html  page.html  post.html  splash.html
_modern_data_estate/: first_item.md  fourth_item.md  second_item.md  third_item.md
_new_skills_training/: communicate_and_act.md  define_the_process.md  explore_and_model_data.md  get_started.md  set_up_modern_data_estate.md
_pages/: about.md  category-archive.md  testpage.md  videos.md  year-archive.md
_posts/: 2019-04-18-welcome-to-jekyll.md  2021-02-15-first-post.md  2021-02-16-Intro-Post.md  2021-04-30-welcome-to-jekyll.markdown  (+6 more)
(+2408 files in other folders)
